--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - working-directory: otel-filter-agent
+    - working-directory: ./otel-filter-agent
     - uses: actions/checkout@v4
     - name: Set up JDK 17
       uses: actions/setup-java@v4
