--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,7 +20,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - working-directory: ./otel-filter-agent
     - uses: actions/checkout@v4
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -28,6 +27,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+        working-directory: ./otel-filter-agent
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
