--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,8 +33,8 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Build Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: Package
-        path: target
+        path: target/otel-extension-0.1.jar
         if-no-files-found: error
