--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,3 +40,5 @@ jobs:
         if-no-files-found: error
     - name: Release
       uses: softprops/action-gh-release@v2
+      with:
+        tag_name: v0.1
