--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,4 +41,5 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v2
       with:
-        tag_name: v0.3
+        tag_name: v0.4
+        files: ./otel-filter-agent/target/otel-extension-0.1.jar
